1.싱글톤 2.키 매니저 추가 +메인 변경됬다고 뜰텐데 실제로 변경된사항없음(테스트하느라키매니저 호출하고 그런 흔적(지금은 없음))

--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -141,10 +141,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Keymannager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Singtleton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BridgeShooter.h" />
+    <ClInclude Include="Keymannager.h" />
+    <ClInclude Include="Singtleton.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
