--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicPattern.cpp" />
+    <ClCompile Include="InGameScene.cpp" />
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="ImageManager.cpp" />
@@ -150,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="BasicPattern.h" />
     <ClInclude Include="BridgeShooter.h" />
+    <ClInclude Include="InGameScene.h" />
     <ClInclude Include="KeyManager.h" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="Missile.cpp" />
