--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Pattern.cpp">
       <Filter>소스 파일\Pattern\Super</Filter>
     </ClCompile>
+    <ClCompile Include="InGameScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BridgeShooter.h">
@@ -97,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="Pattern.h">
       <Filter>소스 파일\Pattern\Super</Filter>
+    </ClInclude>
+    <ClInclude Include="InGameScene.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
