--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="ImageManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SinePattern.cpp" />
     <ClCompile Include="SpaceShip.cpp" />
     <ClCompile Include="Unit.cpp" />
   </ItemGroup>
@@ -164,6 +165,7 @@
     <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Pattern.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClInclude Include="SinePattern.h" />
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="Unit.h" />
   </ItemGroup>
