--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -97,7 +97,7 @@
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
     <ClCompile Include="Planet_SSJ.cpp">
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="HomingPattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
@@ -108,6 +108,12 @@
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClCompile>
     <ClCompile Include="Planet.cpp">
+      <Filter>소스 파일\Bridge\Unit</Filter>
+    </ClCompile>
+    <ClCompile Include="BoomerangFactory.cpp">
+      <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClCompile>
+    <ClCompile Include="Planet_KMS.cpp">
       <Filter>소스 파일\Bridge\Unit</Filter>
     </ClCompile>
   </ItemGroup>
@@ -176,7 +182,7 @@
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
     <ClInclude Include="Planet_SSJ.h">
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="HomingPattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
@@ -187,6 +193,12 @@
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClInclude>
     <ClInclude Include="Planet.h">
+      <Filter>소스 파일\Bridge\Unit</Filter>
+    </ClInclude>
+    <ClInclude Include="BoomerangFactory.h">
+      <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="Planet_KMS.h">
       <Filter>소스 파일\Bridge\Unit</Filter>
     </ClInclude>
   </ItemGroup>
