--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -144,8 +144,8 @@
     <ClCompile Include="BasicFactory.cpp" />
     <ClCompile Include="BasicPattern.cpp" />
     <ClCompile Include="BoomerangPattern.cpp" />
-    <ClCompile Include="HomingFactory.cpp" />
-    <ClCompile Include="HomingPattern.cpp" />
+    <ClCompile Include="RainFactory.cpp" />
+    <ClCompile Include="RainPattern.cpp" />
     <ClCompile Include="MissileManager.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="InGameScene.cpp" />
@@ -166,8 +166,8 @@
     <ClInclude Include="Factory.h" />
     <ClInclude Include="BasicPattern.h" />
     <ClInclude Include="BoomerangPattern.h" />
-    <ClInclude Include="HomingFactory.h" />
-    <ClInclude Include="HomingPattern.h" />
+    <ClInclude Include="RainFactory.h" />
+    <ClInclude Include="RainPattern.h" />
     <ClInclude Include="MissileManager.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="InGameScene.h" />
