--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -96,8 +96,6 @@
     <ClCompile Include="BoomerangPattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
-    <ClCompile Include="Planet_SSJ.cpp">
-	</ClCompile>
     <ClCompile Include="HomingPattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
@@ -108,6 +106,9 @@
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClCompile>
     <ClCompile Include="Planet.cpp">
+      <Filter>소스 파일\Bridge\Unit</Filter>
+    </ClCompile>
+    <ClCompile Include="Planet_SSJ.cpp">
       <Filter>소스 파일\Bridge\Unit</Filter>
     </ClCompile>
   </ItemGroup>
@@ -175,8 +176,6 @@
     <ClInclude Include="BoomerangPattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
-    <ClInclude Include="Planet_SSJ.h">
-	</ClInclude>
     <ClInclude Include="HomingPattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
@@ -187,6 +186,9 @@
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClInclude>
     <ClInclude Include="Planet.h">
+      <Filter>소스 파일\Bridge\Unit</Filter>
+    </ClInclude>
+    <ClInclude Include="Planet_SSJ.h">
       <Filter>소스 파일\Bridge\Unit</Filter>
     </ClInclude>
   </ItemGroup>
