--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="BoomerangPattern.cpp" />
     <ClCompile Include="HomingFactory.cpp" />
     <ClCompile Include="HomingPattern.cpp" />
+    <ClCompile Include="JinHwang.cpp" />
     <ClCompile Include="MissileManager.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="InGameScene.cpp" />
@@ -158,6 +159,7 @@
     <ClCompile Include="SinePattern.cpp" />
     <ClCompile Include="SpaceShip.cpp" />
     <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="SprialPattern.cpp" />
     <ClCompile Include="Unit.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +170,7 @@
     <ClInclude Include="BoomerangPattern.h" />
     <ClInclude Include="HomingFactory.h" />
     <ClInclude Include="HomingPattern.h" />
+    <ClInclude Include="JinHwang.h" />
     <ClInclude Include="MissileManager.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="InGameScene.h" />
@@ -180,6 +183,7 @@
     <ClInclude Include="SinePattern.h" />
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="Planet.h" />
+    <ClInclude Include="SprialPattern.h" />
     <ClInclude Include="Unit.h" />
   </ItemGroup>
   <ItemGroup>
