--- a/BridgeShooter/BridgeShooter.vcxproj
+++ b/BridgeShooter/BridgeShooter.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="SpaceShip.cpp" />
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="SpiralPattern.cpp" />
+    <ClCompile Include="SSJFactory.cpp" />
     <ClCompile Include="Unit.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -190,6 +191,7 @@
     <ClInclude Include="SpaceShip.h" />
     <ClInclude Include="Planet.h" />
     <ClInclude Include="SpiralPattern.h" />
+    <ClInclude Include="SSJFactory.h" />
     <ClInclude Include="Unit.h" />
   </ItemGroup>
   <ItemGroup>
