--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="소스 파일\Scene">
       <UniqueIdentifier>{e906b2e7-aa15-4a3d-8f33-51794057335d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Bridge\Factory\Super">
+      <UniqueIdentifier>{26cbf9f6-215a-4be5-aeda-baa085185fe3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -135,6 +138,9 @@
     <ClCompile Include="SSJFactory.cpp">
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClCompile>
+    <ClCompile Include="JinHwangFactory.cpp">
+      <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageManager.h">
@@ -160,9 +166,6 @@
     </ClInclude>
     <ClInclude Include="SpaceShip.h">
       <Filter>소스 파일\Bridge\Unit</Filter>
-    </ClInclude>
-    <ClInclude Include="Factory.h">
-      <Filter>소스 파일\Bridge\Factory</Filter>
     </ClInclude>
     <ClInclude Include="Missile.h">
       <Filter>소스 파일\GameObject</Filter>
@@ -238,6 +241,12 @@
     </ClInclude>
     <ClInclude Include="SSJFactory.h">
       <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="JinHwangFactory.h">
+      <Filter>소스 파일\Bridge\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="Factory.h">
+      <Filter>소스 파일\Bridge\Factory\Super</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
