--- a/BridgeShooter/BridgeShooter.vcxproj.filters
+++ b/BridgeShooter/BridgeShooter.vcxproj.filters
@@ -147,14 +147,15 @@
     <ClCompile Include="JinHwangFactory.cpp">
       <Filter>소스 파일\Bridge\Factory</Filter>
     </ClCompile>
-
     <ClCompile Include="NormalPattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
     <ClCompile Include="DelayBasicPattern.cpp">
       <Filter>소스 파일\Pattern</Filter>
     </ClCompile>
-
+    <ClCompile Include="Animation.cpp">
+      <Filter>소스 파일\Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageManager.h">
@@ -265,7 +266,6 @@
     <ClInclude Include="Factory.h">
       <Filter>소스 파일\Bridge\Factory\Super</Filter>
     </ClInclude>
-
     <ClInclude Include="NormalPattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
@@ -275,6 +275,8 @@
     <ClInclude Include="DelayBasicPattern.h">
       <Filter>소스 파일\Pattern</Filter>
     </ClInclude>
-
+    <ClInclude Include="Animation.h">
+      <Filter>소스 파일\Engine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
